loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:1: error: Missing closing brace `}' assumed here
while (!sortieTrouvee()) {
^